@@ -1,3 +1,10 @@
+2001-11-05  Danny Smith  <dannysmith@users.sourceforge.net>
+
+	* include/commdlg.h: Include <unknwn.h> rather than local
+	definition of LPUKNOWN. 
+	* include/rpcproxy.h: Don't include if ndef CINTERFACE.
+	Emit warning.
+
 2001-11-05  Mattia Barbon  <mbarbon@dsi.unive.it>
 
 	* include/windef.h (DECLSPEC_NORTEURN): Add an empty version
